--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "charset-normalizer==3.0.1",
     "idna==3.4",
     "requests==2.28.2",
+    "StrEnum==0.4.9",
     "urllib3==1.26.14",
 ]
 
