--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,13 +14,28 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Poetry
+        uses: dschep/install-poetry-action@v1.2
+
+    - name: Cache Poetry virtualenv
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.virtualenvs
+        key: poetry-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          poetry-${{ hashFiles('**/poetry.lock') }}
+
+    - name: Set Poetry config
+      run: |
+        poetry config settings.virtualenvs.in-project false
+        poetry config settings.virtualenvs.path ~/.virtualenvs
+
     - name: Install dependencies
       run: |
-        sudo apt install heimdal-dev
-        python -m pip install --upgrade pip
-        python -m pip install wheel
-        pip install pylint
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        run: poetry install
+        if: steps.cache.outputs.cache-hit != 'true'
+        
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
