--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -35,7 +35,6 @@ jobs:
       run: |
         run: poetry install
         if: steps.cache.outputs.cache-hit != 'true'
-        
+
     - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+      run: poetry run pylint
