--- a/.github/workflows/test-python-package.yml
+++ b/.github/workflows/test-python-package.yml
@@ -17,6 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        poetry-version: ["1.4.1"]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,21 +27,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     
     - name: Install Poetry
-      uses: dschep/install-poetry-action@v1.2
-
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v1
-      id: cache
+      uses: batilo/actions-poetry@v2
       with:
-        path: ~/.virtualenvs
-        key: poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          poetry-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Set Poetry config
-      run: |
-        poetry config settings.virtualenvs.in-project false
-        poetry config settings.virtualenvs.path ~/.virtualenvs
+        poetry-version: ${{ matrix.poetry-version }}
 
     - name: Install dependencies
       run: |
