--- a/.github/workflows/test-python-package.yml
+++ b/.github/workflows/test-python-package.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     
     - name: Install Poetry
-      uses: batilo/actions-poetry@v2
+      uses: abatilo/actions-poetry@v2.1.6
       with:
         poetry-version: ${{ matrix.poetry-version }}
 
