--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,17 +12,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
-      - name: Install flit
+
+      - name: Install Poetry
+      uses: abatilo/actions-poetry@v2.1.6
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+
+      - name: Install dependencies
         run: |
-          pip install flit
+          sudo apt install heimdal-dev
+          poetry install
+
       - name: Publish the distibution to PyPI
         if: github.repository == 'michaeldcanady/pyrestsdk'
-        run: flit publish
+        run: |
+          poetry config pypi-token.pypi $PYPI_TOKEN
+          poetry publish --build
         env:
-          FLIT_INDEX_URL: https://upload.pypi.org/legacy/
-          FLIT_USERNAME: __token__
-          FLIT_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
