--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,33 +8,24 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        poetry-version: ["1.4.1"]
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.2
-
-    - name: Cache Poetry virtualenv
-      uses: actions/cache@v1
-      id: cache
+      uses: abatilo/actions-poetry@v2.1.6
       with:
-        path: ~/.virtualenvs
-        key: poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          poetry-${{ hashFiles('**/poetry.lock') }}
-
-    - name: Set Poetry config
-      run: |
-        poetry config settings.virtualenvs.in-project false
-        poetry config settings.virtualenvs.path ~/.virtualenvs
+        poetry-version: ${{ matrix.poetry-version }}
 
     - name: Install dependencies
       run: |
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
+        sudo apt install heimdal-dev
+        poetry install
 
     - name: Analysing the code with pylint
       run: poetry run pylint
