--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -28,4 +28,4 @@ jobs:
         poetry install
 
     - name: Analysing the code with pylint
-      run: poetry run pylint
+      run: poetry run pylint $(git ls-files '*.py')
