--- a/.github/workflows/create_docs.yml
+++ b/.github/workflows/create_docs.yml
@@ -9,12 +9,19 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
 
+      - name: Install Poetry
+        uses: abatilo/actions-poetry@v2.1.6
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme
+          sudo apt install heimdal-dev
+          poetry install
+
       - name: Sphinx build
-        run: |
-          sphinx-build docs docs/_build
+        run: poetry run sphinx-build docs docs/_build
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
