--- a/.github/workflows/create_docs.yml
+++ b/.github/workflows/create_docs.yml
@@ -1,13 +1,21 @@
-name: Docs
+name: Create Sphinx for module
+
 on: [push, pull_request, workflow_dispatch]
+
 permissions:
     contents: write
+
 jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.1.6
