fixing token info

--- a/.github/workflows/create_docs.yml
+++ b/.github/workflows/create_docs.yml
@@ -1,6 +1,9 @@
 name: Create Sphinx docs for module
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  release:
+    types:
+      - published
 
 permissions:
     contents: write
