--- a/.github/workflows/create_docs.yml
+++ b/.github/workflows/create_docs.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        python-version: ["3.11"]
         poetry-version: ["1.4.1"]
 
     steps:
@@ -22,7 +23,7 @@ jobs:
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
         uses: abatilo/actions-poetry@v2.1.6
