--- a/.github/workflows/create_docs.yml
+++ b/.github/workflows/create_docs.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt install heimdal-dev
-          poetry install
+          poetry install --no-interaction --no-root --with docs
 
       - name: Sphinx build
         run: poetry run sphinx-build docs docs/_build
