--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,20 +22,20 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Poetry
+      - name: Install Poetry ${{ matrix.poetry-version }}
         uses: abatilo/actions-poetry@v2.1.6
         with:
           poetry-version: ${{ matrix.poetry-version }}
 
       - name: Install dependencies
-        run: |
-          sudo apt install heimdal-dev
-          poetry install --no-interaction --no-root --with dev
+        run: poetry self add 'poetry-dynamic-versioning[plugin]'
+
+      - name: Build
+        run: poetry build
 
       - name: Publish the distibution to PyPI
-        if: github.repository == 'michaeldcanady/pyrestsdk'
         run: |
-          poetry publish --build --username $PYPI_USERNAME --password $PYPI_PASSWORD
+          poetry publish --username $PYPI_USERNAME --password $PYPI_PASSWORD --dry-run
         env:
           PYPI_USERNAME: __token__
           PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
