--- a/.github/workflows/test-python-package.yml
+++ b/.github/workflows/test-python-package.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Install Poetry
+    - name: Install Poetry ${{ matrix.poetry-version }}
       uses: abatilo/actions-poetry@v2.1.6
       with:
         poetry-version: ${{ matrix.poetry-version }}
