--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Publish the distibution to PyPI
         run: |
-          poetry publish --username $PYPI_USERNAME --password $PYPI_PASSWORD --dry-run
+          poetry publish --username $PYPI_USERNAME --password $PYPI_PASSWORD
         env:
           PYPI_USERNAME: __token__
           PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
