--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.8"
 StrEnum = "^0.4.10"
 requests = "^2.28.2"
 requests-kerberos = "^0.14.0"
+sphinx-autoapi = "^2.1.0"
 
 [tool.poetry.group.test]
 optional = true
@@ -34,6 +35,7 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^6.1.3"
+sphinx-press-theme = "^0.8.0"
 
 [tool.poetry.group.lint]
 optional = true
