--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ optional = true
 
 [tool.poetry.group.lint.dependencies]
 pylint = "^2.17.1"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
