--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -28,7 +28,7 @@ jobs:
         poetry install --no-interaction --no-root --with lint
 
     - name: Analysing the code with pylint
-      if: matrix.python-version != "3.8" and matrix.python-version != "3.9"
+      if: ${{ matrix.python-version != 3.8 && matrix.python-version != 3.9 }}
       run: poetry run pylint $(git ls-files '*.py')
     
     - name: Analysing the code with pylint
