--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -33,4 +33,4 @@ jobs:
     
     - name: Analysing the code with pylint
       if: ${{ matrix.python-version == 3.8 || matrix.python-version == 3.9 }}
-      run: poetry run pylint $(git ls-files '*.py') --ignore ./pyrestsdk/request/_base_request310.py
+      run: poetry run pylint $(git ls-files '*.py') --ignore ^pyrestsdk/request/_base_request310.py
