--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: [3.8, 3.9, 3.10, 3.11]
         poetry-version: ["1.4.1"]
 
     steps:
@@ -32,5 +32,5 @@ jobs:
       run: poetry run pylint $(git ls-files '*.py')
     
     - name: Analysing the code with pylint
-      if: ${{ matrix.python-version == 3.8 || matrix.python-version == 3.9 }}
+      if: ${{ matrix.python-version < 3.10 }}
       run: poetry run pylint $(git ls-files '*.py') --ignore _base_request310.py
