--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,8 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10., 3.11]
+        python-version: [3.8, 3.9, 3.10, 3.11]
         poetry-version: ['1.4.1']
+        exclude:
+          - python-version: 3.10
 
     steps:
     - uses: actions/checkout@v3
