--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,7 +13,7 @@ jobs:
     env:
         python-version: ${{ format('{0}.{1}', matrix.python-major-version, matrix.python-minor-version) }}
 
-    name: Python ${{env.python-version}} - Poetry ${{poetry-version}}
+    name: Python ${{ format('{0}.{1}', matrix.python-major-version, matrix.python-minor-version) }} - Poetry ${{poetry-version}}
 
     steps:
     - uses: actions/checkout@v3
